--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ main,
 }
 
 .jarallax{
-  background: url("../../img/lonely-dog.jpg") no-repeat center center fixed;
+  background: url("img/lonely-dog.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -25,10 +25,3 @@ main,
   height: 400px;
 }
 
-/*  footer {
-   position:absolute;
-   bottom:0;
-   width:100%;
-   height:160px;   /* Height of the footer */
-   background:#6cf;
-}
