--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ main,
 }
 
 .jarallax{
-  background: url("img/lonely-dog.jpg") no-repeat center center fixed;
+  background: url("../img/lonely-dog.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
