--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,15 @@ main,
   height: 400px;
 }
 
+.testimonial-carousel .testimonial {
+    margin-right: 15%;
+    margin-left: 15%;
+}
+
+.testimonial-carousel .testimonial .avatar img {
+    -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+    max-width: 170px;
+}
+
+
