--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,18 @@ main,
   height: 100%;
 }
 
-.jarallax {
+
+/*.jarallax {
   background: url("../img/lonely-dog.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+}*/
 
-main {
+/*main {
   background: #fff;
-}
+}*/
 
 #home {
   background-image: none;
